--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,27 +9,20 @@
 
     <Button
         android:id="@+id/btnShowList"
-        android:layout_width="200dp"
+        android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:layout_weight="1"
         android:layout_gravity="center"
         android:layout_marginTop="5dp"
+        android:layout_weight="1"
         android:text="@string/show_list"
-        android:textSize="30sp"
-        />
+        android:textSize="30sp" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/list"
         android:layout_width="match_parent"
-        android:layout_marginEnd="5dp"
+        android:layout_height="0dp"
         android:layout_marginStart="5dp"
-        android:layout_height="0dp"
-        android:layout_weight="6"/>
-
-    <TextView
-        android:id="@+id/txtDetails"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="3"/>
+        android:layout_marginEnd="5dp"
+        android:layout_weight="6" />
 
 </LinearLayout>
